{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 72,
  "lineage": "29ec8bcc-50da-8fed-0fff-3633e1d7bbcb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elb_instance_example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4a70bd98c6d6441",
            "arn": "arn:aws:ec2:ap-south-1:237389711669:instance/i-0d16086313cc2f216",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d16086313cc2f216",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f2a1c3f4c0e6535d",
            "private_dns": "ip-10-0-0-227.ap-south-1.compute.internal",
            "private_ip": "10.0.0.227",
            "public_dns": "ec2-52-66-55-110.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.55.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec0dbbc7f65a5f31",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e1a4a4d0f7d3f95",
            "tags": {
              "Name": "EC2-Instance-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07c13df4829ef290f"
            ]
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.ap-south-1a-public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elb_instance_example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4a70bd98c6d6441",
            "arn": "arn:aws:ec2:ap-south-1:237389711669:instance/i-0deccbedaea496ff7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0deccbedaea496ff7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04f9922f1d5f17fb4",
            "private_dns": "ip-10-0-1-9.ap-south-1.compute.internal",
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-13-232-224-99.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.224.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007b101061ffc6160",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08851756bd2cfd5bf",
            "tags": {
              "Name": "EC2-Instance-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07c13df4829ef290f"
            ]
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.ap-south-1b-public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:internet-gateway/igw-08a94e7c5bd4bebfd",
            "id": "igw-08a94e7c5bd4bebfd",
            "owner_id": "237389711669",
            "vpc_id": "vpc-09194cbb65d954935"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:237389711669:loadbalancer/app/alb/658e931e4ed17c46",
            "arn_suffix": "app/alb/658e931e4ed17c46",
            "dns_name": "alb-1478554833.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:237389711669:loadbalancer/app/alb/658e931e4ed17c46",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-07c13df4829ef290f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e1a4a4d0f7d3f95"
              },
              {
                "subnet_id": "subnet-08851756bd2cfd5bf"
              }
            ],
            "subnets": [
              "subnet-00e1a4a4d0f7d3f95",
              "subnet-08851756bd2cfd5bf"
            ],
            "tags": {
              "Environment": "alb"
            },
            "vpc_id": "vpc-09194cbb65d954935",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.ap-south-1a-public1",
            "aws_subnet.ap-south-1b-public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:237389711669:listener/app/alb/658e931e4ed17c46/9ae5ff0fd69d4e57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:237389711669:targetgroup/tf-example-lb-tg/752a8ba03506ae3e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:237389711669:listener/app/alb/658e931e4ed17c46/9ae5ff0fd69d4e57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:237389711669:loadbalancer/app/alb/658e931e4ed17c46",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.test",
            "aws_security_group.elb_sg",
            "aws_subnet.ap-south-1a-public1",
            "aws_subnet.ap-south-1b-public2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:237389711669:targetgroup/tf-example-lb-tg/752a8ba03506ae3e",
            "arn_suffix": "targetgroup/tf-example-lb-tg/752a8ba03506ae3e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:237389711669:targetgroup/tf-example-lb-tg/752a8ba03506ae3e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09194cbb65d954935"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:237389711669:targetgroup/tf-example-lb-tg/752a8ba03506ae3e-20210203121920624000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:237389711669:targetgroup/tf-example-lb-tg/752a8ba03506ae3e",
            "target_id": "i-0d16086313cc2f216"
          },
          "dependencies": [
            "aws_instance.elb_instance_example1",
            "aws_lb_target_group.test",
            "aws_security_group.elb_sg",
            "aws_subnet.ap-south-1a-public1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ap-south-1a-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dc49a58ff473170a",
            "owner_id": "237389711669",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a94e7c5bd4bebfd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet1"
            },
            "vpc_id": "vpc-09194cbb65d954935"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.custom",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ap-south-1b-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-029407a8e5c0413a9",
            "owner_id": "237389711669",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a94e7c5bd4bebfd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet2"
            },
            "vpc_id": "vpc-09194cbb65d954935"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.custom",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ap-south-1a-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f4ba8b50e9a8824",
            "route_table_id": "rtb-0dc49a58ff473170a",
            "subnet_id": "subnet-00e1a4a4d0f7d3f95"
          },
          "dependencies": [
            "aws_internet_gateway.custom",
            "aws_route_table.ap-south-1a-public1",
            "aws_subnet.ap-south-1a-public1",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ap-south-1b-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064c703a33d477504",
            "route_table_id": "rtb-029407a8e5c0413a9",
            "subnet_id": "subnet-08851756bd2cfd5bf"
          },
          "dependencies": [
            "aws_internet_gateway.custom",
            "aws_route_table.ap-south-1b-public2",
            "aws_subnet.ap-south-1b-public2",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:security-group/sg-07c13df4829ef290f",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c13df4829ef290f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "237389711669",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09194cbb65d954935"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ap-south-1a-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:subnet/subnet-00e1a4a4d0f7d3f95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00e1a4a4d0f7d3f95",
            "map_public_ip_on_launch": false,
            "owner_id": "237389711669",
            "tags": {
              "Name": "Public Subnet1"
            },
            "vpc_id": "vpc-09194cbb65d954935"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ap-south-1b-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:subnet/subnet-08851756bd2cfd5bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/28",
            "id": "subnet-08851756bd2cfd5bf",
            "map_public_ip_on_launch": false,
            "owner_id": "237389711669",
            "tags": {
              "Name": "Public Subnet2"
            },
            "vpc_id": "vpc-09194cbb65d954935"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237389711669:vpc/vpc-09194cbb65d954935",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09430369e3368b511",
            "default_route_table_id": "rtb-07665a77aa5f147ca",
            "default_security_group_id": "sg-0682b1838178768f9",
            "dhcp_options_id": "dopt-f2b17a99",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09194cbb65d954935",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07665a77aa5f147ca",
            "owner_id": "237389711669",
            "tags": {
              "Name": "terraform-aws-vpc"
            }
          }
        }
      ]
    }
  ]
}